# exifrensc

./: .gitignore  Cargo.toml
crates/database/: .env  Cargo.toml  settings.db
crates/database/entity/: Cargo.toml
crates/database/entity/src/: exif.rs  file.rs  lib.rs  prelude.rs  release.rs  settings.rs
crates/database/migration/: Cargo.toml
crates/database/migration/src/: lib.rs  m20220101_000001_create_version_table.rs  m20231108_080026_create_settings.rs
crates/database/src/: actions.rs  commands.rs  connection.rs  db.rs  lib.rs  server.rs
crates/database/src/models/: exif.rs  file.rs
crates/database/src2/: actions.rs  lib.rs  server.rs
crates/database/src2/models/: mod.rs
crates/database/tests/: count_rows.rs  full_setup.rs
src/: db.rs  main.rs
